--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h3 class="fs-2 text-body-emphasis">Code The Gap</h3>
                     <h4>January 2024 - Present</h4>
                     <ul>
-                        <li>Volunteer at a school to teach a class of students Python. </li>
+                        <li>Volunteer at a school to teach a class of K-12th grade students Python. </li>
                         <li>Help students learn basic programming concepts.</li>
                         <li>Through this class, students will be able to build a game by the end of the 10 week period.</li>
                     </ul>
