--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume ~ Website</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -18,12 +18,14 @@
     <section title>
         <div class="background font">
             <div class="pt-4 text-center">
-                <h1 class="display-5 fw-bold text-body-emphasis pt-5">My name is <span class="blue">Alex</span></h1>
+                <h1 class= "display-5 fw-bold text-body-emphasis pt-5">My name is <span class="blue">Alex</span></h1>
                 <div class="col-lg-6 mx-auto">
-                <p class="lead pt-3">And I aspire to become a future Software Developer.</p>
+                <p class="lead pt-3">And I am a future Software Engineer.</p>
+                <!-- 
                 <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-laptop mb-5" viewBox="0 0 16 16">
                     <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5"/>
                 </svg>
+                -->
                 </div>
             </div>
         </div>
@@ -33,13 +35,13 @@
     <section About me class=" background font">
         <div class="container col-xxl-8 px-4 pb-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-              <div class="col-10 col-sm-8 col-lg-6">
+              <div class="col-lg-6">
                 <img src="./Images/me.JPG" class="d-block mx-lg-auto img-fluid me" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
               </div>
               <div class="col-lg-6 ">
-                <h1 class=" blue lh-1 mb-3">About Me</h1>
-                <p class="lead">
-                    I am currently a sophomore at the University of Minnesota, Twin Cities, majoring in Computer Science. I hold the belief that technology enables significant advancements in our society, and I am eager to acquire the ability to contribute. My current focus includes learning <span class="blue">functional programming using OCaml</span>, delving into <span class="blue">data structures and algorithms with Java</span>, and <span class="blue">exploring JavaScript</span>.
+                <h1 class=" blue lh-1 mb-3 fw-bold">About Me</h1>
+                <p class="lead ">
+                    I am currently a Junior at the University of Minnesota, Twin Cities, majoring in Computer Science. My passion for Computer Science has come due to my belief that technology enables significant advancements in society. My current interests include learning <span class="blue fst-italic"> web development with languages like HTML/CSS, JavaScript, and SQL</span>, delving into <span class="blue fst-italic">data structures and algorithms</span>, and <span class="blue fst-italic">exploring AI</span>.
                 </p>
               </div>
             </div>
@@ -48,22 +50,23 @@
 
     <!-- Resume -->
     <Section Resume class="background font">
-        <div class="container py-5" id="featured-3">
-            <h2 class=" blue">My Experience</h2>
-            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-                <div class="feature col">
-                    <h3 class="fs-2 text-body-emphasis">Code The Gap</h3>
-                    <h4>January 2024 - Present</h4>
+        <div class="container py-5 " id="featured-3">
+            <h2 class=" blue fw-bold center" >My Experience</h2>
+            <div class="row g-4 py-5  row-cols-lg-3 ">
+
+                <div class="feature section py-3">
+                    <h3 class="fs-2 text-body-emphasis "> Code The Gap</h3>
+                    <h4>January 2024 - May 2024</h4>
                     <ul>
-                        <li>Volunteer at a school to teach a class of K-7th grade students Python. </li>
-                        <li>Help students learn basic programming concepts.</li>
-                        <li>Through this class, students will be able to build a game by the end of the 10 week period.</li>
+                        <li>Volunteered at an elementary school to teach a class of K-7th grade students Python. </li>
+                        <li>Taught students basic programming concepts like variables, loops, and conditions.</li>
+                        <li>By the end of the program, students were able to create and explain basic programming concepts</li>
                     </ul>
                 </div>
 
-                <div class="feature col">
+                <div class="feature section py-3">
                     <h3 class="fs-2 text-body-emphasis">Commuity Advisor</h3>
-                    <h4>August 2023 - Present</h4>
+                    <h4>August 2023 - May 2024</h4>
                     <ul>
                         <li>Assist 40 residents in academic and personal success.</li>
                         <li>Organize and host floor events to create community and belonging.</li>
@@ -71,29 +74,33 @@
                     </ul>
                 </div>
 
-                <div class="feature col">
+                <div class="feature section py-3">
                     <h3 class="fs-2 text-body-emphasis">Building Manager</h3>
                     <h4>November 2022 - Present</h4>
                     <ul>
-                        <li>Setup and teardown events; emphasize on customer service and hospitality.</li>
+                        <li>Setup and teardown events; emphasis on customer service and hospitality.</li>
                         <li>Help maintain exercise machine cleanliness.</li>
                         <li>Ability to adapt quickly under pressure; manage emergencies such as injuries in a fast
                             and controlled manner.</li>
                     </ul>
                 </div>
+                
             </div>
         </div>
     </Section>
 
 
     <!-- Skills -->
-    <section Skills class="background font">
+    <section Technical Skills class="background font">
         <div class="container center">
-            <h2 class="blue pb-5">Skills</h2>
+            <h2 class="blue pb-5">Technical Skills</h2>
             <div class="row">
-                <h4 class="col-4">Python</h4>
-                <h4 class="col-4">HTML & CSS</h4>
-                <h4 class="col-4">Spanish</h4>
+                <h4 class="col-lg-2">Python</h4>
+                <h4 class="col-lg-2">Java</h4>
+                <h4 class="col-lg-2">Ocaml</h4>
+                <h4 class="col-lg-2">HTML & CSS</h4>
+                <h4 class="col-lg-2">JavaScript</h4>
+                <h4 class="col-lg-2">NodeJS</h4>
             </div>
         </div>
     </section>
