--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <ul>
                         <li>Volunteered at an elementary school to teach a class of K-7th grade students Python. </li>
                         <li>Taught students basic programming concepts like variables, loops, and conditions.</li>
-                        <li>By the end of the program, students were able to create and explain basic programming concepts</li>
+                        <li>By the end of the program, students were able to create and explain basic programming concepts.</li>
                     </ul>
                 </div>
 
@@ -92,15 +92,15 @@
 
     <!-- Skills -->
     <section Technical Skills class="background font">
-        <div class="container center">
-            <h2 class="blue pb-5">Technical Skills</h2>
+        <div class="container center ">
+            <h2 class="blue py-5">Technical Skills</h2>
             <div class="row">
-                <h4 class="col-lg-2">Python</h4>
-                <h4 class="col-lg-2">Java</h4>
-                <h4 class="col-lg-2">Ocaml</h4>
-                <h4 class="col-lg-2">HTML & CSS</h4>
-                <h4 class="col-lg-2">JavaScript</h4>
-                <h4 class="col-lg-2">NodeJS</h4>
+                <h4 class="col-lg-4"> Python <span class="blue fst-italic">-- Intermediate --</span></h4>
+                <h4 class="col-lg-4">Java <span class="blue fst-italic">-- Intermediate --</span></h4>
+                <h4 class="col-lg-4">Ocaml <span class="blue fst-italic">-- Basic --</span></h4>
+                <h4 class="col-lg-4">HTML & CSS <span class="blue fst-italic">-- Intermediate --</span></h4>
+                <h4 class="col-lg-4">JavaScript <span class="blue fst-italic">-- Basic --</span></h4>
+                <h4 class="col-lg-4">NodeJS <span class="blue fst-italic">-- Basic --</span></h4>
             </div>
         </div>
     </section>
@@ -108,7 +108,7 @@
 
     <!-- Contact -->
     <section Contact>
-        <div class="contact-list background blue font">
+        <div class="contact-list background blue font py-5">
             <h3>763-204-3109 | gardu022@umn.edu | <a href= "https://www.linkedin.com/in/alexandergarduno/" >Linkedin</a></h3>
         </div>
     </section>
