--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <Section Resume class="background font">
         <div class="container py-5 " id="featured-3">
             <h2 class=" blue fw-bold center" >My Experience</h2>
-            <div class="row g-4 py-5  row-cols-lg-3 ">
+            <div class="row py-5  row-cols-lg-3 ">
 
                 <div class="feature section py-3">
                     <h3 class="fs-2 text-body-emphasis "> Code The Gap</h3>
