--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section title>
         <div class="background font">
             <div class="pt-4 text-center">
-                <h1 class= "display-5 fw-bold text-body-emphasis pt-5">My name is <span class="blue">Alex</span></h1>
+                <h1 class= "display-5 fw-bold text-body-emphasis pt-5">My name is <span class="blue">chicken</span></h1>
                 <div class="col-lg-6 mx-auto">
                 <p class="lead pt-3">And I am a future Software Engineer.</p>
                 <!-- 
